footer part done

--- a/index.html
+++ b/index.html
@@ -125,5 +125,36 @@
             </div>
         </section>
      </main>
+     <footer>
+        <section class="footer-part">
+            <div class="footer-title">
+            <img src="images/Frame.png" alt="">
+            <h2 class="footer-main-title"><span class="nav-colored-title">G</span>amer</h2>
+            </div>
+            <div class="footer-paragraph">
+                <p>Our story</p>
+                <p>Games</p>
+                <p>Web Games</p>
+                <p>Careers</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+            <div class="footer-links">
+                <img src="images/twitter 1.svg" alt="">
+                <img src="images/facebook 1.svg" alt="">
+                <img src="images/Group 49.svg" alt="">
+                <img src="images/linkedin 1.svg" alt="">
+                <img src="images/instagram 1.svg" alt="">
+                <img src="images/apple 1.svg" alt="">
+            </div>
+            <div class="terms">
+                <p><small>Terms and Conditions</small></p>
+                <p><small>Privacy Policy</small></p>
+                <p><small>Cookie Policy</small></p>
+                <p><small>Privacy Settings</small></p>
+            </div>
+            <p class="footer-last"><small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small></p>
+        </section>
+     </footer>
 </body>
 </html>
