game classification part done

--- a/index.html
+++ b/index.html
@@ -124,6 +124,47 @@
                 <img src="images/Group 65.png" alt="">
             </div>
         </section>
+        <!-- game classification parts starts from here -->
+        <div class="game-classfication">
+            <div class="different-game">
+                <div class="game-type">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <h4>Action Game</h4>
+                </div>
+                <div class="game-type">
+                    <img src="images/Rectangle 12.png" alt="">
+                    <h4>Adventure Game</h4>
+                </div>
+                <div class="game-type border-wala-image">
+                    <img src="images/Rectangle 13.png" alt="">
+                    <h4>Arcade Game</h4>
+                </div>
+                <div class="game-type">
+                    <img src="images/Rectangle 14.png" alt="">
+                    <h4>Educational Game</h4>
+                </div>
+                <div class="game-type">
+                    <img src="images/Rectangle 15.png" alt="">
+                    <h4>Word Games</h4>
+                </div>
+                <div class="game-type">
+                    <img src="images/Rectangle 16.png" alt="">
+                    <h4>Role Playing Games</h4>
+                </div>
+                <div class="game-type">
+                    <img src="images/Rectangle 17.png" alt="">
+                    <h4>Music & Audio Games</h4>
+                </div>
+                <div class="game-type">
+                    <img src="images/Rectangle 18.png" alt="">
+                    <h4>Puzzle Games</h4>
+                </div>
+                <div class="game-type">
+                    <img src="images/Rectangle 19.png" alt="">
+                    <h4>Strategy Games</h4>
+                </div>
+            </div>
+        </div>
      </main>
      <footer>
         <section class="footer-part">
